feat: deep VAVR integration across all layers
Domain model:
- Bracket, Round, Tournament: java.util.List → io.vavr.collection.List
- MatchResult: java.util.List<SetResult> → io.vavr.collection.List<SetResult>
- TournamentRepository.findAll() returns io.vavr.collection.List
- BracketGenerationService: VAVR Array, List, Set for bracket building
- MatchAdvancementService: VAVR List for match finding and consolation creation

Infrastructure:
- JsonTournamentRepository: full Try coverage (findAll, delete, loadTournament, ensureStorageDir)
- All mappers: VAVR List operations (map, flatMap) instead of Java streams
- MatchDtoMapper: Option chains for null-checking in fromDto
- MatchResultDtoMapper: converted from MapStruct abstract to plain @Component (VAVR List incompatible with MapStruct)
- TournamentDtoMapper: VAVR List.ofAll for DTO conversions
- Added VAVR dependency to infrastructure and UI POMs

Application:
- TournamentService: VAVR List return type, direct .find() on allMatches()

UI:
- TournamentController: Try for error handling (replaces try-catch blocks)
- BracketPane: VAVR HashMap for match lookup
- BracketLayoutCalculator: VAVR List for positions and connectors
- MatchBoxView: VAVR mkString() instead of Collectors.joining()
- MatchResultDialog: VAVR List for existing sets display

All 233 tests pass.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>