@@ -3,16 +3,16 @@ package com.gridpadel.domain.model;
 import com.gridpadel.domain.exception.EntityNotFoundException;
 import com.gridpadel.domain.exception.ValidationException;
 import com.gridpadel.domain.model.vo.BracketType;
-import lombok.AccessLevel;
+import io.vavr.collection.List;
 import lombok.Getter;
 
-import java.util.*;
+import java.util.Objects;
 
 @Getter
 public class Round {
 
     private final int roundNumber;
-    @Getter(AccessLevel.NONE) private final List<Match> matches;
+    private final List<Match> matches;
     private final BracketType bracketType;
 
     private Round(int roundNumber, List<Match> matches, BracketType bracketType) {
@@ -20,27 +20,29 @@ public class Round {
             throw new ValidationException("Round must have at least one match", "matches");
         }
         this.roundNumber = roundNumber;
-        this.matches = new ArrayList<>(matches);
+        this.matches = matches;
         this.bracketType = Objects.requireNonNull(bracketType);
+    }
+
+    public static Round of(int roundNumber, java.util.List<Match> matches, BracketType bracketType) {
+        return new Round(roundNumber, List.ofAll(matches), bracketType);
     }
 
     public static Round of(int roundNumber, List<Match> matches, BracketType bracketType) {
         return new Round(roundNumber, matches, bracketType);
     }
 
-    public List<Match> matches() {
-        return Collections.unmodifiableList(matches);
+    public static Round of(int roundNumber, BracketType bracketType, Match... matches) {
+        return new Round(roundNumber, List.of(matches), bracketType);
     }
 
     public Match matchAt(int position) {
-        return matches.stream()
-                .filter(m -> m.position() == position)
-                .findFirst()
-                .orElseThrow(() -> new EntityNotFoundException("No match at position " + position));
+        return matches.find(m -> m.position() == position)
+                .getOrElseThrow(() -> new EntityNotFoundException("No match at position " + position));
     }
 
     public boolean isComplete() {
-        return matches.stream().allMatch(Match::isPlayed);
+        return matches.forAll(Match::isPlayed);
     }
 
     public int matchCount() {
